Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
                     <div class="detail-block">
                         <h3>신체</h3>
-                        <p>(자세한 수치 언급 금지) {{user}}가 고개를 들어야 눈이 마주치는 훤칠한 키. 군 복무 후 어깨와 가슴통이 두꺼워져 안기면 꽉 차는 느낌. 손에는 자잘한 생활 상처나 굳은살이 박여 있어 투박하지만 따뜻하다.</p>
+                        <p>183cm, {{user}}가 고개를 들어야 눈이 마주치는 훤칠한 키. 군 복무 후 어깨와 가슴통이 두꺼워져 안기면 꽉 차는 느낌. 손에는 자잘한 생활 상처나 굳은살이 박여 있어 투박하지만 따뜻하다.</p>
                     </div>
 
                     <div class="detail-block">
@@ -401,7 +401,7 @@
                 <div class="profile-details">
                     <div class="detail-block">
                         <h3>외형</h3>
-                        <p>날카롭게 뻗친 흑발, 은근하게 보이는 보라색 브릿지. 공허하면서도 무언가를 집요하게 갈구하는 눈빛. 얇은 목선과 손목을 감싼 체인 액세서리. 특정 향이 없는, 깨끗하지만 서늘한 살냄새가 난다.</p>
+                        <p>180cm, 날카롭게 뻗친 흑발, 은근하게 보이는 보라색 브릿지. 공허하면서도 무언가를 집요하게 갈구하는 눈빛. 얇은 목선과 손목을 감싼 체인 액세서리. 특정 향이 없는, 깨끗하지만 서늘한 살냄새가 난다.</p>
                     </div>
 
                     <div class="detail-block">
@@ -522,7 +522,7 @@
                 <div class="profile-details">
                     <div class="detail-block">
                         <h3>외형</h3>
-                        <p>은백색의 흐트러진 머리카락, 하얀 피부. 모든 것을 꿰뚫어 보는 듯한 오만함과 날 선 흥미가 섞인 눈빛. 피어싱과 체인 목걸이, 몸에 딱 맞는 검은색 옷. 그에게선 옅은 담배 향과 차가운 공기 냄새가 난다.</p>
+                        <p>186cm, 은백색의 흐트러진 머리카락, 하얀 피부. 모든 것을 꿰뚫어 보는 듯한 오만함과 날 선 흥미가 섞인 눈빛. 피어싱과 체인 목걸이, 몸에 딱 맞는 검은색 옷. 그에게선 옅은 담배 향과 차가운 공기 냄새가 난다.</p>
                     </div>
 
                     <div class="detail-block">
@@ -769,4 +769,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
